# C-Compiler

./: CMakeLists.txt  README.md  main.cpp
mips/: MipsInstructions.h  MipsRunner.cpp  MipsRunner.h
mipsCompiler/: MipsAssembler.cpp  MipsAssembler.h  MipsBuilder.cpp  MipsBuilder.h  MipsCompiler.cpp  MipsCompiler.h  VariableTracker.cpp  VariableTracker.h  design.txt  operationsCompiler.cpp  operationsCompiler.h
parsing/: parse.cpp  parse.h  token.cpp  tokenTypes.h  tokenize.h
test_file/: asm.c  asm.s  code.c  code.s  main.c  main.mem  main.num  main.s  stepper.c  tools.c  turn_on_lights.c
tests/: compilationTests.cpp  compilationTests.h  mipsTests.cpp  mipsTests.h  parserTests.cpp  parserTests.h  tests.cpp  tokenizerTests.cpp  tokenizerTests.h
tests/testFramework/: TestFramework.cpp  TestFramework.h
